CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(stest VERSION 1.0.0 LANGUAGES C)

INCLUDE_DIRECTORIES(src)
INCLUDE_DIRECTORIES(tests)

SET(SOURCE_FILES
    src/stest.c
    src/stest.h
    tests/stests.c
    tests/stests.h
)

ADD_COMPILE_DEFINITIONS(STEST_INTERNAL_TESTS)
ADD_EXECUTABLE(stests ${SOURCE_FILES})
